# reliability-gate

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  demo.py  demo_action_gating.py  pyproject.toml  requirements.txt  start.sh
api/: main.py
docs/: announcement_draft.md  github_repo_description.md  how_to_wire_a_real_action.md  launch_checklist.md  license_decision.md  positioning.md  pypi_description.md  risk_register.md  technical_faq.md
reliability_gate/: __init__.py  client.py  decision.py  exceptions.py
sdk/: __init__.py  exceptions.py  wayne_cog.py
storage/: __init__.py  cis_engine.py  experience_store.py  outcome_store.py
tests/: test_reliability_gate.py
